--- a/UserFlowFunctions/UserFlowFunctions.csproj
+++ b/UserFlowFunctions/UserFlowFunctions.csproj
@@ -3,10 +3,43 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+
+        <!-- x-release-please-start-version -->
+        <Version>0.1.0</Version>
+        <PackageVersion>0.1.0</PackageVersion>
+        <!-- x-release-please-end -->
+
+        <!-- NuGet metadata -->
+        <PackageId>UserFlowFunctions</PackageId>
+        <Description>Helpers for Azure AD B2C API Connectors and Entra External ID user-flow extensions.</Description>
+        <Authors>Axel M. Kjønsberg</Authors>
+        <PackageTags>azure;azure-functions;azure-ad-b2c;entra-id;ciam;dotnet;serverless</PackageTags>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/axelkjonsberg/Azure-UserFlow-Helpers</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/axelkjonsberg/Azure-UserFlow-Helpers</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageIcon>icon.png</PackageIcon>
+
+        <!-- SourceLink & deterministic build -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <DebugType>portable</DebugType>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+
+        <!-- Symbols (snupkg) -->
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+        <!-- Generate XML docs for IntelliSense -->
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker" />
         <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+        <None Include="..\README.md" Pack="true" PackagePath="\" Link="README.md" />
     </ItemGroup>
 </Project>
