--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -3,15 +3,43 @@
   "release-type": "simple",
   "packages": {
     ".": {
-      "package-name": "UserFlowFunctions",
+      "package-name": "UserFlowHelpers",
       "changelog-sections": [
-        { "type": "feat",  "section": "Features",    "hidden": false },
-        { "type": "fix",   "section": "Bug Fixes",   "hidden": false },
-        { "type": "docs",  "section": "Docs",        "hidden": false },
-        { "type": "perf",  "section": "Performance", "hidden": false },
-        { "type": "refactor", "section": "Refactoring", "hidden": true },
-        { "type": "test",  "section": "Tests",       "hidden": true },
-        { "type": "chore", "section": "Chores",      "hidden": true }
+        {
+          "type": "feat",
+          "section": "Features",
+          "hidden": false
+        },
+        {
+          "type": "fix",
+          "section": "Bug Fixes",
+          "hidden": false
+        },
+        {
+          "type": "docs",
+          "section": "Docs",
+          "hidden": false
+        },
+        {
+          "type": "perf",
+          "section": "Performance",
+          "hidden": false
+        },
+        {
+          "type": "refactor",
+          "section": "Refactoring",
+          "hidden": true
+        },
+        {
+          "type": "test",
+          "section": "Tests",
+          "hidden": true
+        },
+        {
+          "type": "chore",
+          "section": "Chores",
+          "hidden": true
+        }
       ],
       "extra-files": [
         "UserFlowFunctions/UserFlowFunctions.csproj"
