--- a/templates/UserFlowFunctions.Templates/UserFlowFunctions.Templates.csproj
+++ b/templates/UserFlowFunctions.Templates/UserFlowFunctions.Templates.csproj
@@ -35,5 +35,9 @@
         <Content Include="content\**\*" Exclude="content\**\bin\**;content\**\obj\**" />
         <Compile Remove="**\*" />
         <None Include="README.md" Pack="true" PackagePath="" />
+        <None Update="icon.png">
+          <Pack>true</Pack>
+          <PackagePath>\</PackagePath>
+        </None>
     </ItemGroup>
 </Project>
