--- a/UserFlow.Helpers/UserFlow.Helpers.csproj
+++ b/UserFlow.Helpers/UserFlow.Helpers.csproj
@@ -3,6 +3,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <AssemblyName>UserFlow.Helpers</AssemblyName>
+        <RootNamespace>UserFlow.Helpers</RootNamespace>
 
         <!-- x-release-please-start-version -->
         <Version>0.1.0</Version>
