--- a/templates/UserFlow.Templates/content/ApiConnector/Directory.Packages.props
+++ b/templates/UserFlow.Templates/content/ApiConnector/Directory.Packages.props
@@ -6,7 +6,7 @@
         <PackageVersion Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
         <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
         <PackageVersion Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.5" />
-        <PackageVersion Include="[[UserFlowFunctionsPackageId]]"
-                      Version="[[UserFlowFunctionsVersion]]" />
+        <PackageVersion Include="[[UserFlowHelpersPackageId]]"
+                      Version="[[UserFlowHelpersVersion]]" />
     </ItemGroup>
 </Project>
