--- a/templates/UserFlow.Templates/content/ApiConnector/src/ApiConnector.csproj
+++ b/templates/UserFlow.Templates/content/ApiConnector/src/ApiConnector.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" OutputItemType="Analyzer" />
-    <PackageReference Include="UserFlowFunctions" />
+    <PackageReference Include="[[UserFlowHelpersPackageId]]" />
   </ItemGroup>
 
   <ItemGroup>
