Fix API Connector template source name

--- a/templates/UserFlow.Templates/content/ApiConnector/src/ProjectName.csproj
+++ b/templates/UserFlow.Templates/content/ApiConnector/src/ProjectName.csproj
@@ -5,6 +5,8 @@
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>ProjectName</RootNamespace>
+    <AssemblyName>ProjectName</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
