--- a/templates/UserFlow.Templates/UserFlow.Templates.csproj
+++ b/templates/UserFlow.Templates/UserFlow.Templates.csproj
@@ -18,6 +18,7 @@
         <NoWarn>$(NoWarn);NU5128</NoWarn>
         <NoDefaultExcludes>true</NoDefaultExcludes>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         
         <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     </PropertyGroup>
