--- a/templates/UserFlow.Templates/content/ApiConnector/src/ProjectName.csproj
+++ b/templates/UserFlow.Templates/content/ApiConnector/src/ProjectName.csproj
@@ -7,6 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>ProjectName</RootNamespace>
     <AssemblyName>ProjectName</AssemblyName>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsNotAsErrors>NU1901;NU1902;NU1903;NU1904</WarningsNotAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
