--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -1,49 +1,18 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "release-type": "simple",
+  "include-component-in-tag": true,
   "packages": {
-    ".": {
+    "UserFlow.Helpers": {
+      "package-name": "AxelKjonsberg.AzureUserFlow.Helpers",
+      "release-type": "simple",
+      "component": "helpers",
+      "extra-files": ["UserFlow.Helpers/UserFlow.Helpers.csproj"]
+    },
+    "templates/UserFlow.Templates": {
       "package-name": "AxelKjonsberg.AzureUserFlow.Templates",
-      "changelog-sections": [
-        {
-          "type": "feat",
-          "section": "Features",
-          "hidden": false
-        },
-        {
-          "type": "fix",
-          "section": "Bug Fixes",
-          "hidden": false
-        },
-        {
-          "type": "docs",
-          "section": "Docs",
-          "hidden": false
-        },
-        {
-          "type": "perf",
-          "section": "Performance",
-          "hidden": false
-        },
-        {
-          "type": "refactor",
-          "section": "Refactoring",
-          "hidden": true
-        },
-        {
-          "type": "test",
-          "section": "Tests",
-          "hidden": true
-        },
-        {
-          "type": "chore",
-          "section": "Chores",
-          "hidden": true
-        }
-      ],
-      "extra-files": [
-        "UserFlow.Helpers/UserFlow.Helpers.csproj"
-      ]
+      "release-type": "simple",
+      "component": "templates",
+      "extra-files": ["templates/UserFlow.Templates/UserFlow.Templates.csproj"]
     }
   }
 }
