--- a/.github/workflows/publish-helpers.yml
+++ b/.github/workflows/publish-helpers.yml
@@ -1,7 +1,7 @@
-name: pack-and-publish-library
+name: pack-and-publish-helpers-package
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    tags: [ 'helpers-v*.*.*' ]
 
 jobs:
   tests:
