--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ on:
   workflow_call:
   pull_request:
   push:
-    branches: [ main ]
+    branches: [ master ]
 jobs:
   run-tests:
     runs-on: ubuntu-latest
