--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,10 +1,12 @@
 name: release-please
 on:
+  workflow_call:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 permissions:
   contents: write
+  issues: write
   pull-requests: write
 
 jobs:
